Fixed Footer Alignment

--- a/styles/important-safety-information.css
+++ b/styles/important-safety-information.css
@@ -28,3 +28,9 @@ header.site-header {
     margin-left: 0;
   }
 }
+
+@media (min-width: 1024px) {
+  .hpp-dtc-footer__content {
+    padding-inline: 2.15rem;
+  }
+}
